fix spacing of footer menu

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -657,4 +657,10 @@ html {
       }
     }
   }
+
+  footer.menu-links {
+    li {
+      margin-bottom: 8px;
+    }
+  }
 }
